[package]
name = "chokidar"
version = "0.1.0"
edition = "2021"
description = "A cross-platform command line utility to watch file system changes."
repository = "https://github.com/ahaoboy/chokidar"
homepage = "https://github.com/ahaoboy/chokidar"
authors = ["ahaoboy"]
license = "MIT"

[dependencies]
wax = "0.6.0"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
